--- a/src/UI/TraitUI.form
+++ b/src/UI/TraitUI.form
@@ -59,7 +59,10 @@
           <SubComponents>
             <Component class="javax.swing.JButton" name="addTraitButton">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Add Trait"/>
+                <Property name="text" type="java.lang.String" value="Add"/>
+                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[60, 23]"/>
+                </Property>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addTraitButtonActionPerformed"/>
@@ -67,17 +70,25 @@
             </Component>
             <Component class="javax.swing.JButton" name="renameTraitButton">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Rename Trait"/>
+                <Property name="text" type="java.lang.String" value="Rename"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="renameTraitButtonActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="deleteTraitButton">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Delete"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteTraitButtonActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="searchTraitField">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Search..."/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[200, 22]"/>
+                  <Dimension value="[150, 22]"/>
                 </Property>
               </Properties>
               <Events>
